test(FieldInjection): 父类有字段注入时，子类也能被注入